@@ -106,7 +106,7 @@ class RDoc::Attr < RDoc::MethodAttr
       @visibility,
       parse(@comment),
       singleton,
-      @file.absolute_name,
+      @file.relative_name,
       @parent.full_name,
       @parent.class,
       @section.title
