@@ -2,7 +2,7 @@
   <h3 class="section-header">Defined In</h3>
   <ul>
 <% klass.in_files.each do |tl| %>
-    <li><%= h tl.absolute_name %>
+    <li><%= h tl.relative_name %>
 <% end %>
   </ul>
 </nav>
